# codePreview

c++/hw04_trie/: CMakeLists.txt  morse.cpp  student_tests.cpp  trie.h
c++/hw05_tetris/: CMakeLists.txt  Cube.h  Dimension.cpp  Dimension.h  Engine.cpp  Engine.h  Factory.h  Game.cpp  Game.h  Geometry.cpp  Geometry.h  README.md  RandomGenerator.cpp  RandomGenerator.h  SDLWrapper.cpp  SDLWrapper.h  Score.cpp  Score.h  Stock.cpp  Stock.h  Tetromino.cpp  Tetromino.h  TextureRef.h  Textures.cpp  Textures.h  main.cpp
c++/mini05_bmp/: CMakeLists.txt  bmp_image.cpp  bmp_image.h  main.cpp  test-student.cpp
c++/mini05_bmp/bmp/: bmp.cpp  bmp.h
c++/mini06_matrix/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp  test-student.cpp
c++/mini07_builder/: ApplicationHelp.hpp  CMakeLists.txt  CommandLineArgument.hpp  Print.cpp  Print.hpp  main.cpp  test-student.cpp
c++/mini08_bank_accounts/: CMakeLists.txt  accounts.cpp  accounts.hpp  bank.cpp  bank.hpp  main.cpp  test-student.cpp
c++/mini10_python_range/: CMakeLists.txt  catch.hpp  range.hpp  test-student.cpp
c/hw03/: memoryVM.c
c/hw04/: gethash.c  hash_helper.c  hash_helper.h
c/hw05/: CMakeLists.txt  common.c  common.h  main.c
c/hw06/: CMakeLists.txt  main.c  svggraph.c  svggraph.h
java/2018-hw02-magic-master/: pom.xml
java/2018-hw02-magic-master/src/main/java/magicthegathering/: MagicTheGathering.java
java/2018-hw02-magic-master/src/main/java/magicthegathering/game/: Generator.java
java/2018-hw02-magic-master/src/main/java/magicthegathering/impl/: CreatureCardImpl.java  GameImpl.java  LandCardImpl.java  PlayerImpl.java
java/2018-hw03-database-master/: pom.xml
java/2018-hw03-database-master/src/main/java/cz/muni/fi/pb162/hw03/: ColumnException.java  Command.java  CommandAbstract.java  Create.java  Database.java  Drop.java  EmptyLineException.java  Engine.java  EngineImpl.java  Insert.java  Main.java  NameException.java  Select.java  Table.java
java/2018-pb162-seminar-project-master/: README.md  pom.xml
java/2018-pb162-seminar-project-master/src/main/java/cz/muni/fi/pb162/project/comparator/: VertexInverseComparator.java
java/2018-pb162-seminar-project-master/src/main/java/cz/muni/fi/pb162/project/demo/: Demo.java
java/2018-pb162-seminar-project-master/src/main/java/cz/muni/fi/pb162/project/exception/: EmptyDrawableException.java  MissingVerticesException.java  TransparentColorException.java
java/2018-pb162-seminar-project-master/src/main/java/cz/muni/fi/pb162/project/geometry/: ArrayPolygon.java  Circle.java  CollectionPolygon.java  Color.java  Colored.java  ColoredPolygon.java  GeneralRegularPolygon.java  LabeledPolygon.java  Paper.java  RegularOctagon.java  SimplePolygon.java  Snowman.java  Square.java  Triangle.java  Vertex2D.java
java/2018-pb162-seminar-project-master/src/main/java/cz/muni/fi/pb162/project/utils/: Gauger.java  SimpleMath.java
java/2018-pb162-seminar-project-master/src/test/java/cz/muni/fi/pb162/project/geometry/: TriangleTest.java
python/: ATree.py  BVTree (GreenBlue ).py  MaxHeap.py  du01_strangelist.py  du02_circularlist.py  du03_find_first.py  du06_canonical_heap.py  du07_binary_trees.py  du09_ballancedBST.py  du10_filesystem.py  du11_graph_algorithms.py
